# cell_simulation

./: pyproject.toml
cell_app/: main.py  main_orig.py
cell_app/src/: game.py  game_orig.py
